Utworzono za pomocą Colab

--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEz6vh+8cmxureXrVwtupr",
+      "authorship_tag": "ABX9TyN3dxu+xbGHI2mwMM10DKSC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,525 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "CBs9OpP_ixU0"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.__version__"
+      ],
+      "metadata": {
+        "id": "mMngsy3clJtu",
+        "outputId": "dea5bdf7-ff63-4eba-80e2-ce67c61e0c7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.25.2'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(dir(np)) #sprawdzamy, jakie mamy metody w numpy"
+      ],
+      "metadata": {
+        "id": "076gty0ZlQMD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(np.array)"
+      ],
+      "metadata": {
+        "id": "6niYJH9vlZ8m"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "encNfZ4blvA3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Podstawowym obiektem w numpy jest wielowymiarowa tablica (wymiary nazwane są osiami - axes)"
+      ],
+      "metadata": {
+        "id": "5g1Wzv_emHKa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([1,3])"
+      ],
+      "metadata": {
+        "id": "_wlZeJNSmJzq"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "YYspshWSmPb-",
+        "outputId": "44dc183d-d4c8-4d5a-e324-64594be97f10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(x)"
+      ],
+      "metadata": {
+        "id": "sfCDSJvjmQ1M",
+        "outputId": "a6a6f406-49cd-4dc2-f6fa-aa0d833e63c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.ndim #wymiar tablicy"
+      ],
+      "metadata": {
+        "id": "Gbnio4dGmTIe",
+        "outputId": "26ffd171-5fc1-4c71-9240-692d19bf9e8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape #liczba elementów"
+      ],
+      "metadata": {
+        "id": "NO-qKCsBmahh",
+        "outputId": "31be0949-aec3-4df7-d822-95e918662094",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.size"
+      ],
+      "metadata": {
+        "id": "S2rm3_60mcXS",
+        "outputId": "bb117bd9-8f27-4b69-c66d-c530116a76e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.dtype"
+      ],
+      "metadata": {
+        "id": "PGTIn9ejmjR-",
+        "outputId": "5df2d87d-4fba-493b-8648-d935b6c41287",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('int64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([1.3, 2.3, 1.4])"
+      ],
+      "metadata": {
+        "id": "2lABN7rOmmUH"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "IeJczrP5m1tS",
+        "outputId": "4e3f75e4-3f53-4116-f2da-b5251361e11a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1.3 2.3 1.4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.dtype"
+      ],
+      "metadata": {
+        "id": "zAKY0ns_m-oK",
+        "outputId": "66cb3ab7-33f1-4fe5-b232-5f259b4e185b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2D Array"
+      ],
+      "metadata": {
+        "id": "Ok_8_0EJnHIc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([[1,2], [-3,1]])"
+      ],
+      "metadata": {
+        "id": "n8FXlxv1nI2q"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.ndim # liczba wymiarów"
+      ],
+      "metadata": {
+        "id": "5Bo8Fy6BnNSN",
+        "outputId": "abd8fa5b-a7d0-4a8e-d907-88b27f725eef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape #liczba wierszy i kolumn"
+      ],
+      "metadata": {
+        "id": "-NvBGV64nUPg",
+        "outputId": "b0ee1690-edd7-49aa-95af-cbaab9a155ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([[1,2,4], [4,2,1]])"
+      ],
+      "metadata": {
+        "id": "NjaRqbH_nVYZ"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "id": "09fQGShHn21H",
+        "outputId": "6d283dde-c706-474f-ab08-e9e80e656fb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3D Array"
+      ],
+      "metadata": {
+        "id": "nxtW9w1_n7Rv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array(\n",
+        "    [[[4,3,1],\n",
+        "      [3,1,2]],\n",
+        "\n",
+        "    [[4,1,3],\n",
+        "     [4,2,1]]]\n",
+        ")\n",
+        "\n",
+        "x"
+      ],
+      "metadata": {
+        "id": "waHZp_P5n8Uz",
+        "outputId": "c47aed80-9901-4d9e-f3da-f81491d10814",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[4, 3, 1],\n",
+              "        [3, 1, 2]],\n",
+              "\n",
+              "       [[4, 1, 3],\n",
+              "        [4, 2, 1]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.ndim"
+      ],
+      "metadata": {
+        "id": "aJwg28pxoUZ-",
+        "outputId": "fda821f2-852f-4dc8-db6b-f12c32c18e3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape # liczba tablic / po ile wierszy/ po ile kolumn"
+      ],
+      "metadata": {
+        "id": "2RHMQkIoogzL",
+        "outputId": "8e67dd53-2ba8-4116-91b6-dd7a1a4b11fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7Nf7uNxaorgj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
