Utworzono za pomocą Colab

--- a/01_numpy_intro.ipynb
+++ b/01_numpy_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4wnK2EaQiiBxwpLsxtNw5",
+      "authorship_tag": "ABX9TyMiMx69jO2ApRw42vBYxTv1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "CBs9OpP_ixU0"
       },
@@ -1200,7 +1200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,7 +1224,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1250,7 +1250,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1276,7 +1276,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1302,7 +1302,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1328,7 +1328,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1354,7 +1354,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1392,7 +1392,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1418,7 +1418,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1445,7 +1445,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1481,7 +1481,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1513,7 +1513,7 @@
       "metadata": {
         "id": "bOWX6w0fvpa5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1528,7 +1528,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1554,7 +1554,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1581,7 +1581,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1616,7 +1616,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1642,7 +1642,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1668,7 +1668,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1694,7 +1694,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1720,7 +1720,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1747,7 +1747,7 @@
           "height": 35
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1777,7 +1777,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1804,7 +1804,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1848,7 +1848,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1874,7 +1874,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1900,7 +1900,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1926,7 +1926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1953,7 +1953,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1979,7 +1979,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2005,7 +2005,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2031,7 +2031,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2057,7 +2057,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2083,7 +2083,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2109,7 +2109,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2135,7 +2135,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2161,7 +2161,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2177,9 +2177,105 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "A = np.arange(start=-10, stop=10, step=0.5)\n",
+        "A.reshape(10,-1)"
+      ],
+      "metadata": {
+        "id": "3K6-GIZ7zxEi",
+        "outputId": "3626695a-2bad-4827-cd5a-f88f24d1906b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-10. ,  -9.5,  -9. ,  -8.5],\n",
+              "       [ -8. ,  -7.5,  -7. ,  -6.5],\n",
+              "       [ -6. ,  -5.5,  -5. ,  -4.5],\n",
+              "       [ -4. ,  -3.5,  -3. ,  -2.5],\n",
+              "       [ -2. ,  -1.5,  -1. ,  -0.5],\n",
+              "       [  0. ,   0.5,   1. ,   1.5],\n",
+              "       [  2. ,   2.5,   3. ,   3.5],\n",
+              "       [  4. ,   4.5,   5. ,   5.5],\n",
+              "       [  6. ,   6.5,   7. ,   7.5],\n",
+              "       [  8. ,   8.5,   9. ,   9.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.bitwise_and(A > -5, A < 5) #zwórci nam True, kiedy element tablicy będzie spełniał warunek AND (bez funkcji 'bitwise' python nie wiedziałby co ma zrobić z tym przedziałem)"
+      ],
+      "metadata": {
+        "id": "ZWf5q2uGPoTe",
+        "outputId": "e03a7209-d1c3-4d90-a47f-6bc538ba1ee4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False, False, False, False, False, False, False, False,\n",
+              "       False, False,  True,  True,  True,  True,  True,  True,  True,\n",
+              "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+              "        True,  True,  True, False, False, False, False, False, False,\n",
+              "       False, False, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.bitwise_or(A < -5, A > 5) # warunek OR"
+      ],
+      "metadata": {
+        "id": "MDVhN7dkP0DP",
+        "outputId": "3487bab2-a7d0-4d80-b35d-3171360369f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+              "        True, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False, False, False, False, False, False,\n",
+              "       False, False, False, False,  True,  True,  True,  True,  True,\n",
+              "        True,  True,  True,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3K6-GIZ7zxEi"
+        "id": "cVNt6oj6RJ-N"
       },
       "execution_count": null,
       "outputs": []
