Utworzono za pomocą Colab

--- a/01_pandas_intro.ipynb
+++ b/01_pandas_intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP//1v3GVJV25ohziiE3jnQ",
+      "authorship_tag": "ABX9TyM4/cm9FBWGp22Lyjw29E2t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "zlTJbYASfEv_"
       },
@@ -49,7 +49,7 @@
           "height": 35
         },
         "id": "hdQc5rmqfLh4",
-        "outputId": "22aa615d-ef2a-4f1a-fca8-a997804c9ec2"
+        "outputId": "6c47b5c1-1c75-43a9-d037-472eed7c0e94"
       },
       "execution_count": 1,
       "outputs": [
@@ -67,6 +67,24 @@
           "execution_count": 1
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "S533vlurDWWK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aX9qpCvXDZcP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -90,7 +108,7 @@
         "id": "1Jvd9DGkfwgC",
         "outputId": "c7b83068-817a-4240-fc06-08a0d1039055"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +134,7 @@
       "metadata": {
         "id": "snT8YjHuf50B"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +145,7 @@
       "metadata": {
         "id": "qBDx-SwygNvr"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +161,7 @@
         "id": "mmsesTgNgZqf",
         "outputId": "2b34f090-e259-44bd-e471-3a6b248fcdd3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +205,7 @@
       "metadata": {
         "id": "pVuoxD1ohJhm"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -203,7 +221,7 @@
         "id": "y2y-VoEFhMNV",
         "outputId": "f642cc09-e303-4072-8b9b-1d212622857d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -229,7 +247,7 @@
       "metadata": {
         "id": "aJpg06ZWhYbz"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +264,7 @@
         "id": "GiOPE41vh1R_",
         "outputId": "05081211-9d02-4bbe-e355-97caa72f030e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +289,7 @@
       "metadata": {
         "id": "q34b6qnIiBFo"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,9 +303,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ok0QHoQPiLDR",
-        "outputId": "6fcd9455-b160-4fa8-c7ce-fa38ca89ee13"
+        "outputId": "1b349abe-0657-456e-da4d-5c4a31ad8708"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +325,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -318,6 +336,105 @@
       ],
       "metadata": {
         "id": "X8Nul_0_ivQZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.index # wyświetlenie indeksów daszych obiektów"
+      ],
+      "metadata": {
+        "id": "Qs0lELEfDbBF",
+        "outputId": "8117777a-60ee-40ae-b0c8-018b4cf861cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2020-01-01', '2020-01-02', '2020-01-03', '2020-01-04',\n",
+              "               '2020-01-05', '2020-01-06', '2020-01-07', '2020-01-08',\n",
+              "               '2020-01-09', '2020-01-10'],\n",
+              "              dtype='datetime64[ns]', freq='D')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(s.index) # wyświetlenie indeksów jako listy (konwersja na listę)"
+      ],
+      "metadata": {
+        "id": "LlGu41t1DcSf",
+        "outputId": "1a4c659f-1473-4cfb-f498-46148b4d6989",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Timestamp('2020-01-01 00:00:00'),\n",
+              " Timestamp('2020-01-02 00:00:00'),\n",
+              " Timestamp('2020-01-03 00:00:00'),\n",
+              " Timestamp('2020-01-04 00:00:00'),\n",
+              " Timestamp('2020-01-05 00:00:00'),\n",
+              " Timestamp('2020-01-06 00:00:00'),\n",
+              " Timestamp('2020-01-07 00:00:00'),\n",
+              " Timestamp('2020-01-08 00:00:00'),\n",
+              " Timestamp('2020-01-09 00:00:00'),\n",
+              " Timestamp('2020-01-10 00:00:00')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.values # wyświetlanie wartości obiektów"
+      ],
+      "metadata": {
+        "id": "hTI9plssDl7C",
+        "outputId": "8cb9a1c3-8df1-4cdb-9215-590a528530e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FWim4IixEDgy"
       },
       "execution_count": null,
       "outputs": []
